practice test: reviewing ch7(modules) - reached question 42